[tool.poetry]
name = "corona"
version = "0.1.0"
description = ""
authors = ["Natsuki0928 <longmonth28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
pandas = "^1.3.3"
streamlit = "^0.89.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
